# sigma-qc-webapp

./: .gitignore  README.md
.github/workflows/: deploy.yml
.trae/documents/: fix-performance-levels.md  improve-chart-tooltips.md
.trae/specs/convert-to-webapp/: checklist.md  spec.md  tasks.md
legacy-python-app/: app.py  main.py  pyproject.toml  requirements.txt  准化西格玛性能验证图及自动选择质控程序.htm
legacy-python-app/data/: lab_info.json  projects.json
legacy-python-app/utils/: __init__.py  calculator.py  charts.py  data_manager.py  report_generator.py
legacy-python-app/准化西格玛性能验证图及自动选择质控程序_files/: ChartDisplay.js.下载  highcharts4.2.6.js.下载  main.js.下载  mainUser.js.下载
webapp/: index.html
webapp/css/: style.css
webapp/js/: app.js  calculator.js  chart.js  excel.js  storage.js
