[project]
name = "sigmapv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "streamlit>=1.55.0",
    "streamlit-option-menu>=0.4.0",
]
